<resources>
    <string name="app_name">Hitch</string>
    <string name="action_settings">Settings</string>
    <string name="change_city">Changer de ville</string>
    <string name="text_home">Accueil</string>
    <string name="text_search">Rechercher</string>
    <string name="text_dressing">Dressing</string>
    <string name="text_user">Profil</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="open_weather_maps_app_id">05f0e775bee5639e3243d646cc8c0262</string>

    <string name="promp_passoublie">Veuillez entrer vôtre adresse mail afin de reinitialiser votre mot de passe</string>
    <string name="textajouter">Veuillez insérer un vêtement</string>
    <string name="promp_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_deconnexion">Se déconnecter</string>
    <string name="action_forgotten_password">Mot de passe oublié</string>
    <string name="action_register">Créer un compte</string>
    <string name="action_passoublie">Envoyer</string>

    <string name="prompt_email">Mail</string>
    <string name="action_retour">Retour</string>
    <string name="action_enregistrer">Enregistrer</string>
    <string name="action_send_new_password">Send new password</string>

    <string name="prompt_pseudo">Pseudo</string>
    <string name="prompt_email_confirm">Mail de confirmation</string>
    <string name="prompt_last_name">Nom</string>
    <string name="prompt_first_name">Prénom</string>
    <string name="action_male">Homme</string>
    <string name="action_female">Femme</string>
    <string name="date_birth">Date de naissance</string>
    <string name="city">Ville</string>
    <string name="action_create">Créer</string>
    <string name="action_confirmerC">Confirmer les changements</string>
    <string name="prompt_nom_vetement">Pseudo</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Connectez vous à Internet</string>

    <string name="galButton">Gallerie</string>
    <string name="camButton">Caméra</string>
    <string name="dressingButton">Ouvrir la librairie</string>
    <string name="ajoutButton">Ajouter un vêtement</string>
    <string name="genererButton">Générer une tenue</string>
    <string name="confirmerButton">Confirmer</string>
    <string name="annulerButton">Annuler</string>



    <string-array name="spinnerItem">
        <item textcolor="white">Type Vetements</item>
        <item>Tshirt</item>
        <item>Manche Longue</item>
        <item>Chemise</item>
        <item>Costume</item>
        <item>Pull</item>
        <item>Sweat</item>
        <item>Veste</item>
        <item>Manteau</item>
        <item>Pantalon Costume</item>
        <item>Pantalon</item>
        <item>Jupe</item>
        <item>Basket</item>
        <item>Chaussure Ville</item>
        <item>Tong</item>
        <item>Botte</item>

    </string-array>
    <string-array name="spinnerItem2">
        <item>Couleur</item>
        <item>Blanc</item>
        <item>Noir</item>
        <item>Rouge</item>
        <item>Vert</item>
        <item>Bleue</item>
        <item>Gris</item>
        <item>Jaune</item>
    </string-array>

    <string name="log_out">Log out</string>
    <string name="textview">TextView</string>
    <string name="le_titre_de_votre_post">Le titre de vôtre post</string>
    <string name="titre">Titre</string>
    <string name="envoyer">Publier</string>
    <string name="commentaire">Commentaire</string>
    <string name="l_image_poster">L\'image à poster</string>
    <string name="commentaire_post">Commentaire</string>
    <string name="utilisateur">Utilisateur</string>
    <string name="la_date">La date</string>
    <string name="la_date_du_post">La date</string>
    <string name="favorite_shape">Favorite_shape</string>
    <string name="_0_likes">0 likes</string>
    <string name="param_tres">Paramètres</string>
    <string name="ville">Ville</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="pseudo">Pseudo</string>


    <!--  <style name="mySpinnerItemStyle" parent="@android:style/Widget.Holo.DropDownItem.Spinner">
        <item name="android:textColor">@color/my_spinner_text_color</item>
    </style>-->

    <string name="t1">Dressing Virtuel</string>
    <string name="t2">Gagnez du temps</string>
    <string name="t3">Partagez en ligne</string>

    <string name="d1">Enregistez tous vos vêtements en ligne pour une meilleure gestion de votre dressing personnel.</string>
    <string name="d2">Une tenue hebdomadaire vous est proposée en fonction de critères divers : météo, événements, mode...</string>
    <string name="d3">Partagez votre tenue du jour et échangez avec vos amis.</string>

    <string name="skip_button">Passer</string>
    <string name="done_button">Commencer</string>
</resources>
