<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/rL_Settings"
    tools:context="bottomnav.hitherejoe.com.bottomnavigationsample.profil.SettingsFragment">


    <ScrollView
        android:id="@+id/set_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/settings_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_pseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_pseudo"
                android:maxLines="1"/>


            <EditText
                android:id="@+id/edit_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_last_name"
                android:maxLines="1" />


            <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_first_name"
                android:maxLines="1" />


            <EditText
                android:id="@+id/edit_date_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_birth"
                android:ems="10"
                android:inputType="none"
                android:textIsSelectable="true"
                tools:ignore="LabelFor"
                android:windowSoftInputMode="stateAlwaysHidden"/>

            <EditText
                android:id="@+id/edit_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:maxLines="1" />

            <LinearLayout
                android:id="@+id/button_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/settings_return_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_retour"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/edit_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_confirmerC"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>