<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".start.InscriptionActivity"
    android:theme="@style/Theme.Inscription"
    android:fitsSystemWindows="true">

    <ScrollView
        android:id="@+id/register_Scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/logohitch_inscription"
                android:src="@drawable/logoinscription"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.03" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/pseudo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/prompt_pseudo"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/blue" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email"
                    android:maxLines="1"
                    android:textColor="@color/blue"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/email_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email_confirm"
                    android:maxLines="1"
                    android:textColor="@color/blue"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_password"
                    android:maxLines="1"
                    android:textColor="@color/blue"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/prompt_last_name"
                    android:maxLines="1"
                    android:textColor="@color/blue"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/prompt_first_name"
                    android:maxLines="1"
                    android:textColor="@color/blue"/>
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioSexe"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_male"
                    android:textStyle="bold"
                    android:windowSoftInputMode="stateAlwaysHidden"/>

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_female"
                    android:textStyle="bold"
                    android:windowSoftInputMode="stateAlwaysHidden"/>
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/date_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/date_birth"
                    android:ems="10"
                    android:textIsSelectable="true"
                    tools:ignore="LabelFor"
                    android:textColor="@color/blue"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/city"
                    android:maxLines="1"
                    android:textColor="@color/blue"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/button_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.20">

                <ImageButton
                    android:id="@+id/return_button"
                    android:layout_width="90dp"
                    android:layout_height="46dp"
                    android:background="@color/B_Inscription"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    app:srcCompat="?attr/homeAsUpIndicator" />

                <TextView
                    android:id="@+id/create_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="114dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="56dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_creer"
                    android:gravity="center"
                    android:text="@string/action_create"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
