<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:clickable="true"
    tools:context=".dressing.AjouterVetementFragment">


    <ScrollView
        android:id="@+id/set_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/settings_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:orientation="vertical"
            android:weightSum="1">


            <TextView
                android:id="@+id/text1"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:text="@string/textajouter"
                android:layout_marginTop="21dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.07" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/button33"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:text="@string/action_enregistrer"
                android:layout_marginTop="21dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/button_envoyer"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/galButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/galButton"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/camButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camButton"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:textSize="16sp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/imgView"
                android:layout_alignParentStart="true"
                tools:ignore="ContentDescription,ObsoleteLayoutParam" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>