<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    android:background="@color/white">


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_marginTop="25dp"
        android:weightSum="1">

        <TextView android:id="@+id/textpassoublie"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/promp_passoublie"
            android:gravity="center"
            android:textSize="16sp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/passoublie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/promp_email"
                android:maxLines="1"
                android:textColor="@color/mainColor"/>
        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/retour"
                android:layout_width="80dp"
                android:layout_height="46dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="34dp"
                android:background="@color/white"
                android:textStyle="bold"
                app:srcCompat="?attr/homeAsUpIndicator" />

            <TextView
                android:id="@+id/envoyermail"
                android:layout_width="114dp"
                android:layout_height="47dp"
                android:background="@drawable/button_connexion_rond"
                android:gravity="center"
                android:text="@string/action_passoublie"
                android:textSize="16sp"
                android:layout_alignTop="@+id/retour"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>